composer dyn routing and tests work