@@ -4,9 +4,11 @@ package org.composer.core.utils;
 import org.apache.camel.AsyncCallback;
 import org.apache.camel.Exchange;
 import org.composer.core.converters.GetUserModel;
+import org.composer.core.model.ModelUser;
 import org.composer.core.model.XTaskModel;
 import users.Users;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 public class UserAsyncCamelCallback extends AbstractAsyncCameCallback<Users.UsersWithGroupsDto>{
@@ -16,7 +18,11 @@ public class UserAsyncCamelCallback extends AbstractAsyncCameCallback<Users.User
     @Override
     public void onNext(Users.UsersWithGroupsDto value) {
         XTaskModel body =  this.exchange.getMessage().getBody(XTaskModel.class);
-        body.getGrpc_step().setOutput(value.getUsersWithGroupsList().stream().map(GetUserModel::fromDto).collect(Collectors.toList()));
+
+        List<ModelUser> modelUserList = value.getUsersWithGroupsList().stream().map(GetUserModel::fromDto).toList();
+        var  currentTask = (Task<String, String, List<ModelUser>>)body.getCurrentTask();
+        currentTask.setOutput(modelUserList);
+
         this.exchange.getIn().setBody(body);
     }
     @Override
